Modified layout somewhat

--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -1,4 +1,4 @@
-﻿@page "/leagues"Engine
+﻿@page "/leagues"
 @layout SetupLayout
 
 @inject LeagueService LeagueService
@@ -33,7 +33,7 @@
 
     protected override void OnInitialized()
     {
-        LeagueNames = LeagueService.GetTestNames();
+        LeagueNames = LeagueService.GetTestData();
     }
 
     void ModifyLeague(League item)
