--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -1,7 +1,17 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Entrants</MudNavLink>
-    <MudNavLink Href="/factor" Match="NavLinkMatch.Prefix" Icon="fas fa-gas-pump">Race factors</MudNavLink>
-    <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
     <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.Uncategorized.ChessKing">Leagues</MudNavLink>
+    <MudNavGroup Title="Entrants" Icon="@Icons.Material.Filled.Settings" IconColor="Color.Warning">
+        <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Setup</MudNavLink>
+        <MudNavLink Href="/drivers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PeopleAlt">Drivers</MudNavLink>
+        <MudNavLink Href="/teams" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.CarRepair">Teams</MudNavLink>
+        <MudNavLink Href="/engines" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SettingsInputComponent">Engines</MudNavLink>
+        <MudNavLink Href="/tracks" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AddRoad">Tracks</MudNavLink>
+        <MudNavLink Href="/traits" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FlashOn">Traits</MudNavLink>
+    </MudNavGroup>
+    <MudNavGroup Title="Race factors" Icon="fas fa-gas-pump">
+        <MudNavLink Href="/manufacturers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PeopleAlt">Manufacturers</MudNavLink>
+        <MudNavLink Href="/strategies" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PeopleAlt">Strategies</MudNavLink>
+    </MudNavGroup>
+    <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
 </MudNavMenu>
