--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -7,9 +7,9 @@
 <PageTitle>Tracks</PageTitle>
 
 <MudContainer>
-    <h2>Tracks</h2>
-    <MudPaper Class="d-flex align-center pa-2 mx-2 my-2">
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="@((e) => AddTrack())">New</MudButton>
+    <MudPaper Class="d-flex justify-space-between pa-2 mx-2 my-2">
+        <MudText Typo="Typo.h4">Tracks</MudText>
+        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTrack">New</MudButton>
     </MudPaper>
     <MudDataGrid T="Track" Items="@TrackNames" EditMode="DataGridEditMode.Cell" CommittedItemChanges="ModifyTrack" Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.Manual">
         <Columns>
