--- a/SimTECH/SimTECH/Shared/FactorLayout.razor
+++ b/SimTECH/SimTECH/Shared/FactorLayout.razor
@@ -1,16 +1,10 @@
 ﻿@inherits LayoutComponentBase
 @layout MainLayout
 
-<MudLayout>
-    <MudPaper Class="mt-10 mb-10" Elevation="15">
-        <MudToolBar>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" Color="Color.Inherit" IconColor="Color.Default" Size="Size.Large">Engines</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.Power" Color="Color.Inherit" IconColor="Color.Tertiary" Size="Size.Large">Suppliers</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.ModeStandby" Color="Color.Inherit" IconColor="Color.Secondary" Size="Size.Large">Tyres</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.Extension" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Strategies</MudButton>
-        </MudToolBar>
-    </MudPaper>
-    <MudContainer>
-        @Body
-    </MudContainer>
-</MudLayout>
+<MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large" Class="ma-10">
+    <MudButton Href="/manufacturers" StartIcon="@Icons.Material.Outlined.PeopleAlt" IconColor="Color.Surface">Manufacturers</MudButton>
+    <MudButton Href="/strategies" StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary">Strategies</MudButton>
+</MudButtonGroup>
+<MudContainer>
+    @Body
+</MudContainer>
