--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -7,9 +7,9 @@
 <PageTitle>Leagues</PageTitle>
 
 <MudContainer>
-    <h2>Leagues</h2>
     <MudPaper Class="d-flex align-center pa-2 mx-2 my-2">
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="@((e) => AddLeague())">New</MudButton>
+        <MudText Typo="Typo.h4">Leagues</MudText>
+        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddLeague">New</MudButton>
     </MudPaper>
     <MudDataGrid T="League" Items="@LeagueNames" EditMode="DataGridEditMode.Cell" CommittedItemChanges="ModifyLeague" Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.Manual">
         <Columns>
