--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -18,6 +18,19 @@ html, body {
     font-size: 4em;
 }
 
+.tyre {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    padding: 3px 0px;
+    background-color: black;
+    color: white;
+    border: 3px solid red;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 0.9em;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
