--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -8,6 +8,7 @@
 @using MudBlazor
 @using SimTECH
 @using SimTECH.Components
+@using SimTECH.Data.EditModels
 @using SimTECH.Data.Models
 @using SimTECH.Data.Services
 @using SimTECH.Extensions
